package com.amazon.ata.music.playlist.service.exceptions;

import com.amazon.ata.music.playlist.service.models.requests.UpdatePlaylistRequest;

/**
 * Exception to throw when a given playlist ID is not found in the database.
 */
public class PlaylistNotFoundException extends RuntimeException {

    private static final long serialVersionUID = -912326717789387971L;

    /**
     * Exception with no message or cause.
     */
    public PlaylistNotFoundException() {
        super();
    }

    /**
     * Exception with a message, but no cause.
     * @param message A descriptive message for this exception.
     */
    public PlaylistNotFoundException(String message) {
        super(message);
    }

    /**
     * Exception with no message, but with a cause.
     * @param cause The original throwable resulting in this exception.
     */
    public PlaylistNotFoundException(Throwable cause) {
        super(cause);
    }

    /**
     * Exception with message and cause.
     * @param message A descriptive message for this exception.
     * @param cause The original throwable resulting in this exception.
     */
    public PlaylistNotFoundException(String message, Throwable cause) {
        super(message, cause);
    }

    public PlaylistNotFoundException(String message, UpdatePlaylistRequest updatePlaylistRequest) {
    }
}
